tests/scripts/type_errors/multi_byte_utf8.roto
fn foo() {
    # https://www.unicode.org/charts/PDF/U20A0.pdf
    # €€€€€€€€€ (U+20AC)
    bar();
}
